--- a/app/src/main/res/layout/view_photo.xml
+++ b/app/src/main/res/layout/view_photo.xml
@@ -18,12 +18,12 @@
             tools:src="@drawable/abc_tab_indicator_mtrl_alpha"
             android:id="@+id/photoView"/>
 
-        <TextView
+        <WebView
             style="@style/CardTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@android:color/black"
-            android:layout_below="@+id/photoView"
+            android:layout_alignBottom="@+id/photoView"
             android:id="@+id/titleTextView"
             tools:text="Title"/>
 
@@ -32,6 +32,7 @@
             android:id="@+id/descriptionTextView"
             android:textColor="@android:color/darker_gray"
             android:padding="@dimen/big_padding"
+            android:background="@android:color/transparent"
             android:textSize="@dimen/description_size"
             android:layout_below="@+id/titleTextView"
             tools:text="Description"/>
